// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createJWT() creates a JWT with correct format 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
    "requested": Array [
      "name",
      "phone",
    ],
  },
  "signature": "1hyeUGRBb-cgvjD5KKbpVJBF4TfDjYxrI8SWRJ-GyrJrNLAxt4MutKMFQyF1k_YkxbVozGJ_4XmgZqNaW4OvCw",
}
`;

exports[`verifyJWT() accepts a valid audience 1`] = `
Object {
  "aud": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqY",
  "iat": 1485321133,
  "iss": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
}
`;

exports[`verifyJWT() accepts a valid audience using callback_url 1`] = `
Object {
  "aud": "http://pututu.uport.me/unique",
  "iat": 1485321133,
  "iss": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
}
`;

exports[`verifyJWT() accepts a valid exp 1`] = `
Object {
  "exp": 1485321134,
  "iat": 1485321133,
  "iss": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
}
`;

exports[`verifyJWT() accepts a valid iat 1`] = `
Object {
  "iat": 1485321193,
  "iss": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
}
`;

exports[`verifyJWT() verifies the JWT and return correct payload 1`] = `
Object {
  "iat": 1485321133,
  "iss": "did:uport:2nQtiQG6Cgm1GYTBaaKAgr76uY7iSexUkqX",
  "requested": Array [
    "name",
    "phone",
  ],
}
`;
